--- a/WPIMajorTracking/views/authenticated.html
+++ b/WPIMajorTracking/views/authenticated.html
@@ -3,6 +3,8 @@
 {% block maincontent %}
 
 <h1>Congratulations {{ user.name }}!</h1>
-<p>If you see this page, it means that you managed to log in successfully.</p>
+<div id='watcontainer'>
+	<img id='watgrandma' src='http://memesvault.com/wp-content/uploads/Wat-Meme-Old-Lady-01.jpg' alt='wat'>
+</div>
 
 {% endblock %}
