New users now get an e-mail for verifying their accounts. During registration, there is a check for a valid e-mail, needs styling, but works right now. Rearranged some buttons and other stuff

--- a/WPIMajorTracking/stylesheets/majorTracking.css
+++ b/WPIMajorTracking/stylesheets/majorTracking.css
@@ -1,3 +1,13 @@
+#formContainer form,
+#formContainer form div {
+    display: inline;
+}
+
+#formContainer input {
+    display: inline;
+    vertical-align: middle;
+}
+
 #watgrandma {
 	display: block;
 	width: 400px;
@@ -14,8 +24,11 @@ input {
     display: inline-block;
 }
 
-.signupInput {
+.inputLabel {
     display: block;
+    width: 270px;
+    text-align: right;
+    margin: 5px;
 }
 
 img {
