--- a/WPIMajorTracking/views/authenticated.html
+++ b/WPIMajorTracking/views/authenticated.html
@@ -2,7 +2,7 @@
 
 {% block maincontent %}
 
-<h1>Congratulations {{ user.name }}!</h1>
+<h1>Redirect to the sheets here/put the sheets here?</h1>
 <div id='watcontainer'>
 	<img id='watgrandma' src='http://memesvault.com/wp-content/uploads/Wat-Meme-Old-Lady-01.jpg' alt='wat'>
 </div>
