--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -1,22 +1,28 @@
 {% extends "main.html" %}
 
-{% block title %}Register a new user{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block maincontent %}
 
 <h1>Register a new user</h1>
-<form action="/signup" method="POST">
-	<label for="username">Username</label>
-	<input class="signupInput" type="text" name="username" />
-	<label for="email">Email address</label>
-	<input class="signupInput" type="text" name="email" />
-	<label for="password">Password</label>
-	<input class="signupInput" type="password" name="password" />
-	<label for="name">Name</label>
-	<input class="signupInput" type="text" name="name" />
-	<label for="lastname">Last Name</label>
-	<input class="signupInput" type="text" name="lastname" />
-	<input type="submit" value="Create user" />
+<form style="width: 275px;" action="/signup" method="POST">
+	<label class="inputLabel" for="username">Username:
+		<input type="text" name="username" required/>
+	</label>
+	<label class="inputLabel" for="email">Email:
+		<input type="text" id="emailText" name="email" onkeyup="validateEmail()" required/>
+	</label>
+	<label class="inputLabel" for="password">Password:
+		<input type="password" name="password" required/>
+	</label>
+	<label class="inputLabel" for="name">First Name:
+		<input type="text" name="name" required/>
+	</label>
+	<label class="inputLabel" for="lastname">Last Name:
+		<input type="text" name="lastname" required/>
+	</label>
+	<input type="submit" style="float:right;" value="Create user" id="createUserBtn"/>
+	<br>
 </form>
 
 {% endblock %}
