--- a/WPIMajorTracking/views/login.html
+++ b/WPIMajorTracking/views/login.html
@@ -21,8 +21,7 @@
 </form>
 
 <br>
-<p style="clear:right;"><i>"Forgot password" functionality currently not working</i></p>
-<!--<a href="/forgot">Forgot password</a>-->
+<a href="/forgot">Forgot your password?</a>
 
 
 {% endblock %}
