--- a/WPIMajorTracking/views/resetpassword.html
+++ b/WPIMajorTracking/views/resetpassword.html
@@ -5,13 +5,16 @@
 <h1>Reset password</h1>
 
 <form action="/password" method="post">
-    <label>Select password</label>
+    <label>New password</label>
 	<input type="password" name="password" />
+	<label>Confrim password</label>
 	<input type="password" name="confirm_password" />
 	<input type="hidden" name="t" value="{{ token }}" />
     <input type="submit" value="Update password" />
 </form>
 
-
+{% if mismatch %}
+    <p class="errorMsg"><strong>Passwords do not match!</strong></p>
+{% endif %} 
 
 {% endblock %}
