--- a/WPIMajorTracking/views/login.html
+++ b/WPIMajorTracking/views/login.html
@@ -11,8 +11,8 @@
 {% endif %}
 
 <form class="form" style="width: 275px;" action= "/login" method="POST">
-	<label class="inputLabel" for="username">Username:
-		<input type="text" value="{{ username }}" name="username"/>
+	<label class="inputLabel" for="email_address">Email:
+		<input type="text" value="{{ email_address }}" name="email_address"/>
 	</label>
 	<label class="inputLabel" for="password">Password:
 		<input type="password" name="password"/>
