Fixes bug with logging in and added Major to signup

--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -9,11 +9,13 @@
 	<label class="inputLabel" for="username">Email:
 		<input type="text" id="emailText" name="username" onkeyup="validateEmail()" required/>
 	</label>
-	<!-- <label class="inputLabel" for="email">Email:
-		<input type="text" id="emailText" name="email" onkeyup="validateEmail()" required/>
-	</label> -->
 	<label class="inputLabel" for="password">Password:
 		<input type="password" name="password" required/>
+	</label>
+	<label class="inputLabel" for="major">Major:
+		<select style="width: 173px;" name="major">
+			<option value="Computer Science">Computer Science</option>
+		</select>
 	</label>
 	<label class="inputLabel" for="name">First Name:
 		<input type="text" name="name" required/>
