fix link to css stylesheet

--- a/WPIMajorTracking/views/main.html
+++ b/WPIMajorTracking/views/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>{% block title %}WPI Major Tracking Prototype{% endblock %}</title>
-    <link rel='stylesheet' href='/stylesheets/majorTracking.css'>
+    <link rel='stylesheet' href='../css/majorTracking.css'>
   </head>
 
   <body>
