--- a/WPIMajorTracking/views/home.html
+++ b/WPIMajorTracking/views/home.html
@@ -5,12 +5,12 @@
 
 <p>Insert something about what the WPI Major Tracking tool is here</p>
 <div id="formContainer">
-	<form action="/login">
+	<form action="/public/login.html">
 		<div>
 			<input id="loginButton" type="submit" value="Login">
 		</div>
 	</form>
-	<form action="/signup">
+	<form action="/public/signup.html">
 		<div>
 			<input id="registerButton" type="submit" value="Register">
 		</div>
