--- a/WPIMajorTracking/views/login.html
+++ b/WPIMajorTracking/views/login.html
@@ -10,7 +10,7 @@
 
 {% endif %}
 
-<form class="form" style="width: 275px;" action= "/login" method="POST">
+<form class="form" style="width: 275px;" action= "/api/login" method="POST">
 	<label class="inputLabel" for="email_address">Email:
 		<input type="text" value="{{ email_address }}" name="email_address"/>
 	</label>
