--- a/WPIMajorTracking/views/resetpassword.html
+++ b/WPIMajorTracking/views/resetpassword.html
@@ -4,7 +4,7 @@
 
 <h1>Reset password</h1>
 
-<form action="/password" method="post">
+<form action="/api/password" method="post">
     <label>New password</label>
 	<input type="password" name="password" />
 	<label>Confrim password</label>
@@ -15,6 +15,6 @@
 
 {% if mismatch %}
     <p class="errorMsg"><strong>Passwords do not match!</strong></p>
-{% endif %} 
+{% endif %}
 
 {% endblock %}
