Updates form style with bootstrap. Adds wonderfully covering background image

--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -35,42 +35,36 @@ input {
     margin: 5px;
 }
 
-img {
-    -webkit-animation-name: spin;
-    -webkit-animation-duration: 4000ms;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-name: spin;
-    -moz-animation-duration: 4000ms;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-timing-function: linear;
-    -ms-animation-name: spin;
-    -ms-animation-duration: 4000ms;
-    -ms-animation-iteration-count: infinite;
-    -ms-animation-timing-function: linear;
-    
-    animation-name: spin;
-    animation-duration: 4000ms;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+.center-form {
+  width: 50%;
+  padding: 15px;
+  background-color: rgba(172, 43, 55, 0.9);
+  border-radius: 15px;
+  color: white;
 }
-@-ms-keyframes spin {
-    from { -ms-transform: rotate(0deg); }
-    to { -ms-transform: rotate(360deg); }
+
+.background {
+  min-width: 100%;
+  min-height: 100%;
+  height: auto;
+  width: auto;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -100;
+
 }
-@-moz-keyframes spin {
-    from { -moz-transform: rotate(0deg); }
-    to { -moz-transform: rotate(360deg); }
+
+body {
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/7/79/Earle_Bridge.jpg');
+  background-size: cover;
 }
-@-webkit-keyframes spin {
-    from { -webkit-transform: rotate(0deg); }
-    to { -webkit-transform: rotate(360deg); }
-}
-@keyframes spin {
-    from {
-        transform:rotate(0deg);
-    }
-    to {
-        transform:rotate(360deg);
-    }
+
+html {
+  height: 100%;
+  width: 100%;
 }
