--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -1,8 +1,3 @@
-#formContainer form,
-#formContainer form div {
-    display: inline;
-}
-
 #formContainer input {
     display: inline;
     vertical-align: middle;
@@ -37,10 +32,18 @@ input {
 
 .center-form {
   width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.interaction-block {
   padding: 15px;
-  background-color: rgba(172, 43, 55, 0.9);
+  background-color: rgba(100, 100, 100, 0.7);
   border-radius: 15px;
   color: white;
+  margin: 10px 0px 10px 0px;
 }
 
 .background {
@@ -53,14 +56,20 @@ input {
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: -100;
+}
 
+.header {
+  color: white;
+  text-align: center;
+  width: 75%;
+  margin: auto;
 }
 
 body {
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
-  background-image: url('https://upload.wikimedia.org/wikipedia/en/7/79/Earle_Bridge.jpg');
+  background-image: url('http://7-themes.com/data_images/out/1/6770172-amazing-night-sky-wallpaper.jpg');
   background-size: cover;
 }
 
