--- a/WPIMajorTracking/views/home.html
+++ b/WPIMajorTracking/views/home.html
@@ -1,16 +1,14 @@
 {% extends "main.html" %}
 
 {% block maincontent %}
-<h1>WPI Major Tracking Prototype</h1>
+<div class='header'>
+	<h1>WPI Major Tracking</h1>
 
-<p>Insert something about what the WPI Major Tracking tool is here</p>
-<div id="formContainer">
-	<form action="/public/signup.html">
-		<div>
-			<input id="registerButton" type="submit" value="Register">
-		</div>
-	</form>
-	<div id='login' class='center-block center-form'>
+	<p>Insert something about what the WPI Major Tracking tool is here</p>
+</div>
+
+<div id="formContainer" class='center-form'>
+	<div id='login' class='center-block interaction-block'>
 		{% if failed %}
 
 		    <strong>Login failed!</strong> Check your credentials and try again.
@@ -27,12 +25,26 @@
 				<label for="password">Password:</label>
 				<input type="password" class='form-control' name="password"/>
 			</div>
-
-			<button type="submit" style="margin: 15px 0px 15px 0px;" class='btn btn-primary'>Login</button>
+			<div class='form-group'>
+				<a href="/forgot">Forgot your password?</a>
+			</div>
+			<div class='form-group'>
+				<button type="submit" class='btn-margin btn btn-primary'>
+					<span class='glyphicon glyphicon-lock' aria-hidden='true'></span>
+					Login
+				</button>
+			</div>
 		</form>
-
-		<br>
-		<a href="/forgot">Forgot your password?</a>
-	</div>
+		</div>
+		<div class='interaction-block'>
+			<p>
+				Don't have an account?
+			</p>
+			<form action="/public/signup.html">
+				<div>
+					<input id="registerButton" type="submit" class='btn btn-margin btn-success' value="Register">
+				</div>
+			</form>
+		</div>
 </div>
 {% endblock %}
