--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Coda);
+
 #formContainer input {
     display: inline;
     vertical-align: middle;
@@ -13,6 +15,10 @@
     overflow: hidden;
     width: 100%;
     height: 700px;
+}
+
+h1 {
+  font-family: 'Coda', "Arial";
 }
 
 .errorMsg {
