--- a/WPIMajorTracking/views/home.html
+++ b/WPIMajorTracking/views/home.html
@@ -26,7 +26,7 @@
 				<input type="password" class='form-control' name="password"/>
 			</div>
 			<div class='form-group'>
-				<a href="/forgot">Forgot your password?</a>
+				<a href="/api/forgot">Forgot your password?</a>
 			</div>
 			<div class='form-group'>
 				<button type="submit" class='btn-margin btn btn-primary'>
