--- a/WPIMajorTracking/views/home.html
+++ b/WPIMajorTracking/views/home.html
@@ -3,8 +3,9 @@
 {% block maincontent %}
 <div class='header'>
 	<h1>WPI Major Tracking</h1>
-
-	<p>Insert something about what the WPI Major Tracking tool is here</p>
+	<p style='font-size: 18px; font-style:italic;'>
+		Bringing WPI into the 21st Century
+	</p>
 </div>
 
 <div id="formContainer" class='center-form'>
