--- a/WPIMajorTracking/views/main.html
+++ b/WPIMajorTracking/views/main.html
@@ -18,17 +18,15 @@
     <footer>
       <hr/>
       <p>
-        {% if not user %}
-          <a href="/login">Login</a>
-        {% else %}
-          Logged in as <span style="background-color: OldLace">{{ user.name }}</span> | <a href="/logout">Logout</a>
+        {% if user %}
+          Logged in as <span style="background-color: OldLace">{{ user.name }}</span> | <a href="/api/logout">Logout</a>
         {% endif %}
         |
         <a href="/">Home</a>
         |
-        <a href="/signup">New user</a>
+        <a href="/api/signup">New user</a>
         |
-        <a href="/authenticated">Secured page</a> (you can see this after login)
+        <a href="/secured/authenticated">Secured page</a> (you can see this after login)
         |
         <a href="https://developers.google.com/appengine/docs/python/config/appconfig#Secure_URLs" target="_blank">Secure URLs</a>
       </p>
