Some changes in main.html were not committed because SourceTree was acting weird

--- a/WPIMajorTracking/views/main.html
+++ b/WPIMajorTracking/views/main.html
@@ -1,59 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>{% block title %}WPI Major Tracking Prototype{% endblock %}</title>
-    <link rel='stylesheet' href='../css/majorTracking.css'>
-  </head>
-
-  <body>
-
-  <div class="content">
-    {% block maincontent %}
-
-    {% endblock %}
-  </div>
-
-  <div style="clear: right;">
-    <footer>
-      <hr/>
-      <p>
-        {% if not user %}
-          <a href="/login">Login</a>
-        {% else %}
-          Logged in as <span style="background-color: OldLace">{{ user.name }}</span> | <a href="/logout">Logout</a>
-        {% endif %}
-        |
-        <a href="/">Home</a>
-        |
-        <a href="/signup">New user</a>
-        |
-        <a href="/authenticated">Secured page</a> (you can see this after login)
-        |
-        <a href="https://developers.google.com/appengine/docs/python/config/appconfig#Secure_URLs" target="_blank">Secure URLs</a>
-      </p>
-    </footer>
-  </div>
-
-
-  </body>
-</html>
-
-<script>
-
-function validateEmail() {
-  var emailText = document.getElementById("emailText").value;
-  var submitButton = document.getElementById("createUserBtn");
-  if (IsEmail(emailText)) {
-    submitButton.disabled = false;
-  } else {
-    submitButton.disabled = true;
-  }
-}
-
-function IsEmail(email) {
-  var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-  return regex.test(email);
-}
-
-</script>
+../templates/main.html
