--- a/WPIMajorTracking/views/message.html
+++ b/WPIMajorTracking/views/message.html
@@ -1,4 +1,4 @@
-{% extends "main.html" %}
+{% extends "templates/main.html" %}
 
 {% block maincontent %}
 <p>{% autoescape off %}{{ message }}{% endautoescape %}</p>
