Adds new background image. Adds image directory.

--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -85,7 +85,7 @@ body {
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
-  background-image: url('http://7-themes.com/data_images/out/1/6770172-amazing-night-sky-wallpaper.jpg');
+  background-image: url('/images/gordon.png');
   background-size: cover;
 }
 
