--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -4,27 +4,42 @@
 
 {% block maincontent %}
 
-<h1>Register a new user</h1>
-<form style="width: 275px;" action="/api/signup" method="POST">
-	<label class="inputLabel" for="username">Email:
-		<input type="text" id="emailText" name="username" autocomplete="off" autocapitalize="off" autocorrect="off" onkeyup="validateEmail()" required/>
-	</label>
-	<label class="inputLabel" for="password">Password:
-		<input type="password" name="password" required/>
-	</label>
-	<label class="inputLabel" for="major">Major:
-		<select style="width: 173px;" name="major">
+<h1 class='header'>Register a new user</h1>
+<div id='login' class='center-block center-form interaction-block'>
+<form class='form' action="/api/signup" method="POST">
+	<div class='form-group'>
+		<label for="username" class="required">Email:</label>
+		<input type="email" class='form-control' id="emailText" name="username" autocomplete="off" autocapitalize="off" autocorrect="off" onkeyup="validateEmail()" required/>
+	</div>
+
+	<div class='form-group'>
+		<label for="password" class="required">Password:</label>
+		<input class='form-control' type="password" name="password" required/>
+	</div>
+
+	<div class='form-group'>
+		<label for="password" class="required">Confirm Password:</label>
+		<input class='form-control' type="password" name="password" required/>
+	</div>
+
+	<div class='form-group'>
+		<label for="major" class="required">Major:</label>
+		<select name="major" class='form-control'>
 			<option value="Computer Science">Computer Science</option>
 		</select>
-	</label>
-	<label class="inputLabel" for="name">First Name:
-		<input type="text" name="name" autocomplete="off" autocapitalize="off" autocorrect="off" required/>
-	</label>
-	<label class="inputLabel" for="lastname">Last Name:
-		<input type="text" name="lastname" autocomplete="off" autocapitalize="off" autocorrect="off" required/>
-	</label>
-	<input type="submit" style="float:right;" value="Create user" id="createUserBtn" disabled/>
-	<br>
-</form>
+	</div>
 
+	<div class='form-group'>
+		<label for="name" class="required">First Name:</label>
+		<input type="text" class='form-control' name="name" autocomplete="off" autocapitalize="off" autocorrect="off" required/>
+	</div>
+
+	<div class='form-group'>
+		<label for="lastname" class="required">Last Name:</label>
+		<input type="text" class='form-control' name="lastname" autocomplete="off" autocapitalize="off" autocorrect="off" required/>
+	</div>
+
+	<input type="submit" class='btn btn-margin btn-success' value="Create Account" id="createUserBtn" disabled/>
+</form>
+</div>
 {% endblock %}
