--- a/WPIMajorTracking/views/forgot.html
+++ b/WPIMajorTracking/views/forgot.html
@@ -2,17 +2,29 @@
 
 {% block maincontent %}
 
-<h1>Recover password</h1>
+<div class='header'>
+  <h1>Recover password</h1>
 
-<p>Forgot your password? Enter your email below to receive a link to recover your password.</p>
+  <p>Forgot your password? Enter your email below to receive a link to recover your password.</p>
+</div>
 
-{% if not_found %}
-    <strong>Not found!</strong> We could not found any user with the given email.
-{% endif %}
+<div class='center-block interaction-block' style='width: 50%; margin: auto;'>
+  <form class="form" action= "/api/forgot" method="POST">
 
-<form class="form" action= "/api/forgot" method="POST">
-	<input type="text" value="{{ email_address }}" name="email_address"/>
-	<input type="submit" value="Send password reset link"/>
-</form>
+    <div class='form-group'>
+      <label for='email'>Email Address: </label>
+      <input id='email' class='form-control' type="text" name="email_address"/>
+    </div>
+
+    {% if not_found %}
+    <div style='color: red;'>
+      <strong>Not found!</strong> We could not found any user with the given email.
+    </div>
+    {% endif %}
+
+    <input type="submit" class='btn btn-margin btn-success' value="Send password reset link"/>
+
+  </form>
+</div>
 
 {% endblock %}
