--- a/WPIMajorTracking/views/resetpassword.html
+++ b/WPIMajorTracking/views/resetpassword.html
@@ -2,19 +2,33 @@
 
 {% block maincontent %}
 
-<h1>Reset password</h1>
+<div class='header'>
+	<h1>Reset password</h1>
+</div>
 
-<form action="/api/password" method="post">
-    <label>New password</label>
-	<input type="password" name="password" />
-	<label>Confrim password</label>
-	<input type="password" name="confirm_password" />
-	<input type="hidden" name="t" value="{{ token }}" />
-    <input type="submit" value="Update password" />
-</form>
-
-{% if mismatch %}
-    <p class="errorMsg"><strong>Passwords do not match!</strong></p>
-{% endif %}
+<div class='center-block interaction-block' style='width: 50%; margin: auto;'>
+	{% if updated_password %}
+	<p>Password updated!</p>
+	<form action="/" method="get">
+		<input class='btn btn-margin btn-success' type='submit' value='Return Home'/>
+	</form>
+	{% else %}
+	<form action="/api/password" method="post">
+		<div class='form-group'>
+	    	<label>New password</label>
+			<input class="form-control" type="password" name="password" />
+		</div>
+		<div class='form-group'>
+			<label>Confrim password</label>
+			<input class="form-control" type="password" name="confirm_password" />
+		</div>
+		<input type="hidden" name="t" value="{{ token }}" />
+		{% if mismatch %}
+    	<p class="errorMsg"><strong>Passwords do not match!</strong></p>
+		{% endif %}
+	    <input class='btn btn-margin btn-success' type="submit" value="Update Password" />
+	</form>	
+	{% endif %}
+</div>
 
 {% endblock %}
