--- a/WPIMajorTracking/views/home.html
+++ b/WPIMajorTracking/views/home.html
@@ -19,12 +19,12 @@
 		<form class="form" action= "/api/login" method="POST">
 			<div class='form-group'>
 				<label for="email_address">Email:</label>
-				<input type="email" class='form-control' value="{{ email_address }}" name="email_address"/>
+				<input type="email" class='form-control' value="{{ email_address }}" placeholder="example@email.com" name="email_address"/>
 			</div>
 
 			<div class='form-group'>
 				<label for="password">Password:</label>
-				<input type="password" class='form-control' name="password"/>
+				<input type="password" class='form-control' placeholder="Password" name="password"/>
 			</div>
 			<div class='form-group'>
 				<a href="/api/forgot">Forgot your password?</a>
