--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -9,17 +9,17 @@
 <form class='form' action="/api/signup" method="POST">
 	<div class='form-group'>
 		<label for="username" class="required">Email:</label>
-		<input type="email" class='form-control' id="emailText" name="username" autocomplete="off" autocapitalize="off" autocorrect="off" onkeyup="validateEmail()" required/>
+		<input type="email" class='form-control' id="emailText" name="username" autocomplete="off" autocapitalize="off" autocorrect="off" onkeyup="validateEmail()" placeholder="example@email.com" required/>
 	</div>
 
 	<div class='form-group'>
-		<label for="password" class="required">Password:</label>
-		<input class='form-control' type="password" name="password" required/>
+		<label for="password" class="required" >Password:</label>
+		<input class='form-control' type="password" name="password" id="passwordText" placeholder="Password" required/>
 	</div>
 
 	<div class='form-group'>
 		<label for="password" class="required">Confirm Password:</label>
-		<input class='form-control' type="password" name="password" required/>
+		<input class='form-control' type="password" name="password" id="passwordRepeatText" placeholder="Confirm Password" required/>
 	</div>
 
 	<div class='form-group'>
@@ -31,12 +31,12 @@
 
 	<div class='form-group'>
 		<label for="name" class="required">First Name:</label>
-		<input type="text" class='form-control' name="name" autocomplete="off" autocapitalize="off" autocorrect="off" required/>
+		<input type="text" class='form-control' name="name" autocomplete="off" autocapitalize="off" autocorrect="off" id="firstNameText" placeholder="First Name" required/>
 	</div>
 
 	<div class='form-group'>
 		<label for="lastname" class="required">Last Name:</label>
-		<input type="text" class='form-control' name="lastname" autocomplete="off" autocapitalize="off" autocorrect="off" required/>
+		<input type="text" class='form-control' name="lastname" autocomplete="off" autocapitalize="off" autocorrect="off" id="lastNameText" placeholder="Last Name" required/>
 	</div>
 
 	<input type="submit" class='btn btn-margin btn-success' value="Create Account" id="createUserBtn" disabled/>
