--- a/WPIMajorTracking/views/forgot.html
+++ b/WPIMajorTracking/views/forgot.html
@@ -14,12 +14,12 @@
     {% if not email_sent %}
     <div class='form-group'>
       <label for='email'>Email Address: </label>
-      <input id='email' class='form-control' type="text" name="email_address"/>
+      <input id='email' class='form-control' type="email" name="email_address"/>
     </div>
     {% else %}
     <div>
       <p>Please go check your email for a link to reset your password.</p>
-      <p>FOR DEVELOPERS: go here to reset: <a href="{{ verification_url }}">Reset Link</a> </p>      
+      <p>FOR DEVELOPERS: go here to reset: <a href="{{ verification_url }}">Reset Link</a> </p>  
     </div>
     {% endif %}
 
