Email for logging in is now case insensitive and changed logout button to btn-danger

--- a/WPIMajorTracking/views/home.html
+++ b/WPIMajorTracking/views/home.html
@@ -49,7 +49,7 @@
 		{% else %}
 		<h2>Hello, {{user.name}}!</h2>
 		<form action="/api/logout" method="get">
-			<input class='btn btn-margin btn-success' type='submit' value='Logout'/>
+			<input class='btn btn-margin btn-danger' type='submit' value='Logout'/>
 		</form>
 		{% endif %}
 </div>
