fix little typo in forgot.html

--- a/WPIMajorTracking/views/forgot.html
+++ b/WPIMajorTracking/views/forgot.html
@@ -18,7 +18,7 @@
 
     {% if not_found %}
     <div style='color: red;'>
-      <strong>Not found!</strong> We could not found any user with the given email.
+      <strong>Not found!</strong> We could not find any user with the given email.
     </div>
     {% endif %}
 
