--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -92,3 +92,16 @@ label.required::after {
   color: red;
   font-size: 18px;
 }
+
+#emailText-error {
+  color: red;
+}
+
+#password-error {
+  color: red;
+}
+
+#passwordRepeat-error {
+  color: red;
+}
+
