--- a/WPIMajorTracking/templates/main.html
+++ b/WPIMajorTracking/templates/main.html
@@ -5,9 +5,7 @@
   <title>{% block title %}WPI Major Tracking Prototype{% endblock %}</title>
   <link rel='stylesheet' href='/libs/bootstrap-3.3.6-dist/css/bootstrap.min.css'>
   <link rel='stylesheet' href='/css/majorTracking.css'>
-  <script type="text/javascript" src="/libs/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="/libs/jquery.validate.min.js"></script>
-  <script type="text/javascript" src="/js/script.js"></script>
+  <script type="text/javascript" src="/js"></script>
 </head>
 <body>
   <div class="content">
