--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -9,8 +9,8 @@
 	<form id="registration-form" class='form' action="/api/signup" method="POST">
 		{% if not email_sent %}
 		<div class='form-group'>
-			<label for="email" class="required">Email:</label>
-			<input type="email" class='form-control' id="emailText" name="email" autocomplete="off" autocapitalize="off" autocorrect="off" placeholder="example@email.com" required/>
+			<label for="email_address" class="required">Email:</label>
+			<input type="email" class='form-control' id="emailText" name="email_address" autocomplete="off" autocapitalize="off" autocorrect="off" placeholder="example@email.com" required/>
 		</div>
 		<div class='form-group'>
 			<label for="password" class="required" >Password:</label>
@@ -43,11 +43,12 @@
       		<p>FOR DEVELOPERS: go here to verify: <a href="{{ verification_url }}">Verification Link</a> </p>      
     	</div>
     	{% endif %}
-
-    	{% if user_verified %}
-		<p>The email address has been verified.</p>
-		<input type="submit" formaction="/" formmethod="GET" class='btn btn-margin btn-success' value="Return Home"/>
-		{% endif %}
 	</form>
+	{% if user_verified %}
+	<form class='form' action='/' method='GET'>
+		<p>The email address has been verified.</p>
+		<input type="submit" class='btn btn-margin btn-success' value="Return Home"/>
+	</form>
+	{% endif %}
 </div>
 {% endblock %}
