--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -15,9 +15,10 @@ a:hover {
   text-decoration: underline;
 }
 
-h1 {
+h1, h2 {
   font-family: 'Coda', "Arial";
   text-align: center;
+  margin-top: 25px;
 }
 
 .errorMsg {
