--- a/WPIMajorTracking/templates/main.html
+++ b/WPIMajorTracking/templates/main.html
@@ -6,10 +6,13 @@
   <link rel='stylesheet' href='/libs/bootstrap-3.3.6-dist/css/bootstrap.min.css'>
   <link rel='stylesheet' href='/css/majorTracking.css'>
   <script type="text/javascript" src="/js"></script>
+  {% block head %}
+
+  {% endblock %}
 </head>
 <body>
   {% if user %}
-  
+
   <form method='GET' action='/api/logout'>
     <input id='logoutButton' type='submit' class='btn' value='logout' />
   </form>
