--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -6,8 +6,8 @@
 
 <h1 class='header'>Registration Form</h1>
 <div id='login' class='center-block center-form interaction-block'>
+	{% if not email_sent %}
 	<form id="registration-form" class='form' action="/api/signup" method="POST">
-		{% if not email_sent %}
 		<div class='form-group'>
 			<label for="email_address" class="required">Email:</label>
 			<input type="email" class='form-control' id="emailText" name="email_address" autocomplete="off" autocapitalize="off" autocorrect="off" placeholder="example@email.com" required/>
@@ -39,14 +39,23 @@
 		{% if duplicate %}
 		<p class="error-message">Unable to create user for email {{email_address}} because of duplicate keys {{duplicateKeys}}</p>
 		{% endif %}
+		<input type="hidden" name="resendEmail" value=""/>
+		<input type="hidden" name="resendVerification" value="" />
 		<input type="submit" class='btn btn-margin btn-success' value="Create Account" id="createUserBtn"/>
-		{% elif email_sent and not user_verified %}
-		<div>
-      		<p>Please go check your email for a link to verify your account.</p>
-      		<p>FOR DEVELOPERS: go here to verify: <a href="{{ verification_url }}">Verification Link</a> </p>      
-    	</div>
-    	{% endif %}
 	</form>
+	{% elif email_sent and not user_verified %}
+	<div>
+  		<p>An email has been sent to {{email_address}}. Please check your email for a link to verify your account.</p>
+  		<!-- <form id="testdsad" class='form' action="/api/signup" method="POST">
+  			<input type="hidden" name="email_address" value="{{ email_address }}" />
+  			<input type="hidden" name="resendEmail" value="True" />
+  			<input type="hidden" name="resendVerification" value="{{ verifcation_url }}" />
+  			<input type='submit' class='btn btn-margin btn-info' value='Resend Email'/>
+  			<!-- <input type='submit' class='btn btn-margin btn-success' value='Edit Registration'/> -->
+  		</form> -->
+  		<p>FOR DEVELOPERS: go here to verify: <a href="{{ verification_url }}">Verification Link</a> </p>      
+	</div>
+	{% endif %}
 	{% if user_verified %}
 	<form class='form' action='/' method='GET'>
 		<p>The email address has been verified.</p>
