Hides the verification link when running on app engine

--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -59,7 +59,9 @@
   		<form class='form' style='float:right' action='/api/signup' method='get'>
   			<input type='submit' class='btn btn-margin btn-success' value='Edit Registration'/>
   		</form>
-  		<p>FOR DEVELOPERS: go here to verify: <a href="{{ verification_url }}">Verification Link</a> </p>      
+		{% if development_mode %}
+  		<p>FOR DEVELOPERS: go here to verify: <a href="{{ verification_url }}">Verification Link</a> </p>
+		{% endif %}
 	</div>
 	{% endif %}
 	{% if user_verified %}
