Logout is now capitalized

--- a/WPIMajorTracking/templates/main.html
+++ b/WPIMajorTracking/templates/main.html
@@ -14,7 +14,7 @@
   {% if user %}
 
   <form method='GET' action='/api/logout'>
-    <input id='logoutButton' type='submit' class='btn' value='logout' />
+    <input id='logoutButton' type='submit' class='btn' value='Logout' />
   </form>
 
   {% endif %}
